--- a/index.html
+++ b/index.html
@@ -13,45 +13,43 @@
   </head>
   <body>
     <main class="wrapper">
-      <article class="navbar">
-        <main class="title">
-          <h1>Nunita</h1>
-        </main>
-        <nav class="nav">
+      <header class="navbar-mobile">
+        <!-- acá va el código del navbar mobile -->
+      </header>
+      <header>
+        <nav class="navbar">
+          <i class='bx bx-menu-alt-left'></i>
+          <h1>Nombre</h1>
           <ul class="navbar-items">
             <li>Inicio</li>
-            <li>Nosotros</li>
-            <li>Servicios</li>
+            <li>Productos</li>
             <li>Contacto</li>
+            <li>Carrito</li>
           </ul>
         </nav>
-      </article>
+      </header>
       <article class="body">
-        <section class="info">
-          <h2>Landing Page</h2>
-          <h3>CREANDO LEADS</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla
-            consectetur distinctio provident mollitia culpa voluptatem nam
-            tempora illo veritatis ea fugit, rem reprehenderit rerum sunt dolor.
-            Nihil aut porro quo, aliquid, autem, itaque aspernatur nisi cumque
-            voluptatem corrupti vero error.
-          </p>
-          <div class="btn">+INFORMACIÓN</div>
-        </section>
-        <section class="img">
-          <img src="./assets/programming.webp" alt="" />
+        <img src="./assets/programming.webp" alt="">
+        <section class="body-info">
+          <h2>All Insurance You Need</h2>
+          <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, tempora!</h3>
+          <div class="btn">LET´S START</div>
         </section>
       </article>
-      <article class="footer">
-        <ul class="footer-items">
-          <li><i class="bx bxl-instagram"></i></li>
-          <li><i class='bx bxl-twitter' ></i></li>
-          <li><i class='bx bxl-facebook' ></i></li>
-        </ul>
+      <article class="more">
+        <p>Learn more</p>
+        <i class='bx bx-chevron-down'></i>
+        <!-- <section class="grid">
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+          <div class="grid-item"></div>
+        </section> -->
       </article>
-
     </main>
+
     <script src="./main.js"></script>
   </body>
 </html>
